hphp/hack/test/typecheck/dict_const.php.exp
File "dict_const.php", line 12, characters 46-53:
Expected constant expression for initializer (Parsing[1002])
File "dict_const.php", line 12, characters 46-53:
Illegal constant value (Naming[2023])
